codegen/ui_tests/export_mod_extra_value.stderr
error: extraneous value
  --> ui_tests/export_mod_extra_value.rs:11:24
   |
11 | #[rhai_fn(return_raw = "yes")]
   |                        ^^^^^
